<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/from_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/from" />

            <EditText
                android:id="@+id/from_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/to_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to" />

            <EditText
                android:id="@+id/to_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/cc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc" />

            <EditText
                android:id="@+id/cc_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/bcc_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bcc" />

            <EditText
                android:id="@+id/bcc_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/subject_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/subject" />

            <EditText
                android:id="@+id/subject_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/message_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/message" />

            <EditText
                android:id="@+id/message_field"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="top"
                android:inputType="textMultiLine"
                android:lines="5" />

            <Button
                android:id="@+id/clear_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/clear" />

            <Button
                android:id="@+id/send_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/send" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>

